--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,10 @@
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 
-GITHUB_ID=
-GITHUB_SECRET=
-NEXT_PUBLIC_ADMIN_EMAILS=
+AUTH0_CLIENT_ID=your-auth0-client-id
+AUTH0_CLIENT_SECRET=your-auth0-client-secret
+AUTH0_DOMAIN=your-auth0-domain
+
 
 # Secret key
 # generate one here: https://generate-secret.vercel.app/32
@@ -15,3 +16,6 @@ NEXTAUTH_URL=http://localhost:3000
 # if you want to receive notifications on slack add webhook url
 # https://api.slack.com/apps
 WEBHOOK_URL=
+
+ALLOWED_DOMAINS=
+NEXT_PUBLIC_ADMIN_EMAILS
