--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@next-auth/upstash-redis-adapter": "^3.0.3",
     "@tailwindcss/forms": "^0.5.3",
     "@upstash/redis": "^1.16.0",
+    "@vercel/analytics": "^1.0.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.1.0",
     "next": "^13.0.2",
